# fabiannevarez.github.io

./: CLAUDE.md  dtd-builders.js  dtd-constants.js  dtd-csv.js  dtd-planner.css  dtd-planner.html  dtd-storage.js  dtd-touchpoints.js  dtd-views-core.js  dtd-views-misc.js  dtd-week.js  index.html
jobsearch-os/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  intake.example.md  pyproject.toml  schema.sql
jobsearch-os/config/: scoring_rules.yaml
jobsearch-os/content/: approved_swaps.yaml  cover_letter_content.yaml  messaging_bank.yaml  proof_points.yaml  story_bank.yaml
jobsearch-os/data/: candidate_profile.yaml  claim_policy.yaml  experience_bank.md  resume_master.md  target_roles.yaml
jobsearch-os/db/migrations/: 0001_core.sql  (+1 more)
jobsearch-os/docs/: ARCHITECTURE.md  BUILD_PLAN.md  INVARIANTS.md  MASTER_SPEC.md  NEXT_TASK.md  QUICKSTART_V6.md  RESUME_CODEX.md  spec.md
jobsearch-os/jobsearch/: cli.py  config.py  contacts.py  coverletter.py  dashboard.py  db.py  diagnosis.py  digest.py  intake.py  metrics.py  pipeline.py  scoring.py  signals.py
jobsearch-os/jobsearch_os/: __init__.py  accept_phase1.py  artifacts.py  cli.py  config.py  db.py  dedupe.py  doctor.py  events.py  evidence.py  flow.py  ingest.py  migrations.py  normalize.py  packet.py  paths.py  profile.py  quality.py  redaction.py  review_service.py  scoring.py  state_machine.py
jobsearch-os/scripts/: accept_phase1.ps1  setup_windows.ps1
jobsearch-os/state/: build_state.json  build_work_items.yaml
jobsearch-os/tests/: conftest.py  test_acceptance.py  test_batch_and_digest.py
(+29 files in other folders)
